# TareaGrupal

./: Tarea_3.docx
BiCola/: CMakeLists.txt  main.cpp
BiCola/Controller/: Controller.cpp  Controller.h
BiCola/structures/: List.cpp  List.h  Node.h
CircularDoublyLinkedList/: CMakeLists.txt  main.cpp
CircularDoublyLinkedList/Controller/: Controller.cpp  Controller.h
CircularDoublyLinkedList/structures/: List.cpp  List.h  Node.cpp  Node.h
Trabajo_de_investigacion1/: CMakeLists.txt  main.cpp
Trabajo_de_investigacion1/bl/: Gestor.cpp  Gestor.h
Trabajo_de_investigacion1/bl/listaCircular/: listaCircular.cpp  listaCircular.h
Trabajo_de_investigacion1/bl/listaDobleEnlace/: listaDobleEnlace.cpp  listaDobleEnlace.h
Trabajo_de_investigacion1/bl/nodo/: Nodo.cpp  Nodo.h  NodoDobleEnlace.cpp  NodoDobleEnlace.h
Trabajo_de_investigacion1/ui/tl/: Controller.cpp  Controller.h
Trabajo_de_investigacion1/ui/ui/: Ui.cpp  Ui.h
